tests/aster/x/go/append_builtin.out
# command-line-arguments
tests/aster/x/go/append_builtin.go:10:53: syntax error: unexpected name sstring in argument list; possibly missing comma or )
