tests/aster/x/go/append_builtin.go
//go:build ignore
// Generated by Mochi v0.10.36 on 2025-07-22 18:26:23 GMT+7
package main

import (
    "fmt"
)
var a []int = []int{1, 2}
func main() {
    fmt.Println(stringb, _json.Marshal(append(a, 3))sstring(b)sstrings.ReplaceAll(s)sstrings.ReplaceAll(s)sstrings.ReplaceAll(s)sstrings.ReplaceAll(s)s())
}
